--- a/roman/css/style.css
+++ b/roman/css/style.css
@@ -25,9 +25,18 @@ h1 {
 	margin: 0.2em;
 }
 h2, h3, h4 {
+	margin-top: 0.2em;
+}
+h2 {
 	font-weight: normal;
 	font-size: 1.5em;
-	margin-top: 0.2em;
+}
+h3 {
+	font-weight: normal;
+	font-size: 1.2em;
+}
+h4 {
+	font-weight: normal;
 }
 .center {
 	text-align: center;
@@ -215,3 +224,55 @@ td {
 	color: #90071b;
 }
 /* END TIMELINE */
+/* START ROLLING PERSPECTIVE */
+.roll {
+    display: block;
+    overflow: hidden;
+
+    vertical-align: top;
+
+    -webkit-perspective: 400px;
+       -moz-perspective: 400px;
+
+    -webkit-perspective-origin: 50% 50%;
+       -moz-perspective-origin: 50% 50%;
+}
+.roll span {
+    display: block;
+    position: relative;
+    padding: 0 2px;
+
+    -webkit-transition: all 400ms ease;
+       -moz-transition: all 400ms ease;
+    
+    -webkit-transform-origin: 50% 0%;
+       -moz-transform-origin: 50% 0%;
+    
+    -webkit-transform-style: preserve-3d;
+       -moz-transform-style: preserve-3d;
+}
+    .roll:hover span {
+        background: #111;
+
+        -webkit-transform: translate3d( 0px, 0px, -30px ) rotateX( 90deg );
+           -moz-transform: translate3d( 0px, 0px, -30px ) rotateX( 90deg );
+    }
+.roll span:after {
+    content: attr(data-title);
+
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 0 2px;
+
+    color: #fff;
+    background: #90071b;
+    -webkit-transform-origin: 50% 0%;
+       -moz-transform-origin: 50% 0%;
+
+    -webkit-transform: translate3d( 0px, 105%, 0px ) rotateX( -90deg );
+       -moz-transform: translate3d( 0px, 105%, 0px ) rotateX( -90deg );
+}
+/* END ROLLING PERSPECTIVE */
