--- a/roman/css/style.css
+++ b/roman/css/style.css
@@ -382,3 +382,20 @@ pre {
 	background: #efefef;
 	padding: 1em;
 }
+/* START MOVIE GALLERY */
+.movie {
+	clear: both;
+}
+.movie .movie-left {
+	max-width: 100px;
+	float: left;
+	max-width: 100px;
+}
+.movie .movie-info {
+	margin-left: 120px;
+}
+.movie p, .movie h3 {
+	margin-bottom: 0;
+	margin-top: 0.2em;
+}
+/* END MOVIE GALLERY */
